--- a/Buoi2/style_div.css
+++ b/Buoi2/style_div.css
@@ -1,75 +1,104 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: lightgray;
+}
+
 #wrap {
-  border: 1px solid black;
+/*   border: 1px solid black; */
   margin: auto;
-  width: 800px;
+  width: 770px;
+  background-color: white;
 }
 
 #title {
-  border: 1px solid red;
+/*   border: 1px solid red; */
   background-image: url(header.jpg);
-  margin: 15px;
-  width: 770px;
-  height: 210px;
+  width: fixed;
+  height: 220px;
   background-repeat: no-repeat;
+  margin: 10px;
 }
 
 #title h1 {
   text-shadow: 2px 2px 8px yellow;
   position: relative;
+  color: white;
   left: 25px;
+  top: 15px;
   width: 700px;
-  margin: 15px 30px 15px 15px;
+/*   margin: 15px 30px 15px 15px; */
 }
 
 #menu {
-  border: 2px solid green;
+/*   border: 1px solid green; */
   width: 150px;
-  display: inline-block;
-  position: relative;
-  left: 15px;
   float: left;
-  /* margin-right: 10px; */
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #menu h4 {
-  border: 1px solid blue;
-  padding: 5px;
-  margin: 0px;
   text-align: center;
-  color: white;
   background-color: blue;
+  color: white;
+  line-height: 1.7;
+
 }
 
 #menu ul {
-  display: contents;
-  border: 1px solid gold;
   list-style-type: none;
-  margin: 0px;
+  background-color: lightblue;
+  padding : 2px;
+  
 }
 
 #menu ul li {
+/*   text-align: center; */
   padding: 5px;
-  text-align: left;
+  border-bottom: 1px solid white;
+}
+
+#menu ul li a {
+	text-decoration: none;
+  display: block;
+  padding: : 5px;
+}
+
+#menu ul li a:hover {
+	background-color: lightpink;
 }
 
 #content {
-  display: block;
-  border: 1px solid green;
-  width: 600px;
-  position: relative;
-  left: 185px;
+/*   border: 1px solid orange; */
+  overflow: hidden;
+  width: fixed;
+  margin: 10px;
 }
 
 #content h4 {
-  border: 1px solid orange;
   color: blue;
-  text-align: right;
-  margin-top: 0;
-  padding: 10px;
-  display: inline-block;
+  padding: 5px;
+  font-size: 20px;
 }
 
 #content p {
-  margin-left: 0px;
-  text-align: left;
+/*   border: 1px solid blue; */
+  padding: 5px;
+  font-weight: lighter;
+  font-family: arial;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+#footer {
+  border-top: 2px solid ;
+}
+
+#footer p {
+  text-align: center;
+  margin: 15px;
 }
